src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Proprieta_Ecommerce__c</fullName>
        <label>Proprietà Ecommerce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online sale</fullName>
                </value>
                <value>
                    <fullName>Online Return</fullName>
                </value>
                <value>
                    <fullName>Online Exchange</fullName>
                </value>
                <value>
                    <fullName>In store Pick up (whs)</fullName>
                </value>
                <value>
                    <fullName>In store Pick up (store)</fullName>
                </value>
                <value>
                    <fullName>Return in store (whs)</fullName>
                </value>
                <value>
                    <fullName>Return in store (store)</fullName>
                </value>
                <value>
                    <fullName>Online Return and Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantita__c</fullName>
        <label>Quantità</label>
        <summarizedField>Transaction_Detail__c.Quantita__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sconto_AED__c</fullName>
        <label>Sconto (AED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_AUD__c</fullName>
        <label>Sconto (AUD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_BRL__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_BRL__c - Prezzo_di_vendita_BRL__c =0, (And (Prezzo_di_listino_BRL__c &lt; Prezzo_di_vendita_BRL__c , Prezzo_di_listino_BRL__c &gt;0 )), 
(And (Prezzo_di_listino_BRL__c &gt; Prezzo_di_vendita_BRL__c , Prezzo_di_listino_BRL__c &lt;0 )) 
), 
0 , 
Prezzo_di_listino_BRL__c - Prezzo_di_vendita_BRL__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (BRL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_CAD__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_CAD__c   - Prezzo_di_vendita_CAD__c  =0, (And (Prezzo_di_listino_CAD__c   &lt; Prezzo_di_vendita_CAD__c  , Prezzo_di_listino_CAD__c  &gt;0  )),
(And (Prezzo_di_listino_CAD__c   &gt; Prezzo_di_vendita_CAD__c  , Prezzo_di_listino_CAD__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_CAD__c   - Prezzo_di_vendita_CAD__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (CAD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_CHF__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_CHF__c   - Prezzo_di_vendita_CHF__c  =0, (And (Prezzo_di_listino_CHF__c   &lt; Prezzo_di_vendita_CHF__c  , Prezzo_di_listino_CHF__c  &gt;0  )),
(And (Prezzo_di_listino_CHF__c   &gt; Prezzo_di_vendita_CHF__c  , Prezzo_di_listino_CHF__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_CHF__c   - Prezzo_di_vendita_CHF__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (CHF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_CNY__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_CNY__c   - Prezzo_di_vendita_CNY__c  =0, (And (Prezzo_di_listino_CNY__c   &lt; Prezzo_di_vendita_CNY__c  , Prezzo_di_listino_CNY__c  &gt;0  )),
(And (Prezzo_di_listino_CNY__c   &gt; Prezzo_di_vendita_CNY__c  , Prezzo_di_listino_CNY__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_CNY__c   - Prezzo_di_vendita_CNY__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (CNY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_DKK__c</fullName>
        <label>Sconto (DKK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_EUR__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_EUR__c   - Prezzo_di_vendita_EUR__c  =0, (And (Prezzo_di_listino_EUR__c   &lt; Prezzo_di_vendita_EUR__c  , Prezzo_di_listino_EUR__c  &gt;0  )),
(And (Prezzo_di_listino_EUR__c   &gt; Prezzo_di_vendita_EUR__c  , Prezzo_di_listino_EUR__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_EUR__c   - Prezzo_di_vendita_EUR__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (EUR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_GBP__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_GBP__c   - Prezzo_di_vendita_GBP__c  =0, (And (Prezzo_di_listino_GBP__c   &lt; Prezzo_di_vendita_GBP__c  , Prezzo_di_listino_GBP__c  &gt;0  )),
(And (Prezzo_di_listino_GBP__c   &gt; Prezzo_di_vendita_GBP__c  , Prezzo_di_listino_GBP__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_GBP__c   - Prezzo_di_vendita_GBP__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (GBP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_HKD__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_HKD__c   - Prezzo_di_vendita_HKD__c  =0, (And (Prezzo_di_listino_HKD__c   &lt; Prezzo_di_vendita_HKD__c  , Prezzo_di_listino_HKD__c  &gt;0  )),
(And (Prezzo_di_listino_HKD__c   &gt; Prezzo_di_vendita_HKD__c  , Prezzo_di_listino_HKD__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_HKD__c   - Prezzo_di_vendita_HKD__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (HKD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_JPY__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_JPY__c   - Prezzo_di_vendita_JPY__c  =0, (And (Prezzo_di_listino_JPY__c   &lt; Prezzo_di_vendita_JPY__c  , Prezzo_di_listino_JPY__c  &gt;0  )),
(And (Prezzo_di_listino_JPY__c   &gt; Prezzo_di_vendita_JPY__c  , Prezzo_di_listino_JPY__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_JPY__c   - Prezzo_di_vendita_JPY__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (JPY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_KRW__c</fullName>
        <label>Sconto(KRW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_MOP__c</fullName>
        <label>Sconto (MOP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_PLN__c</fullName>
        <label>Sconto (PLN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_QAR__c</fullName>
        <label>Sconto (QAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_RUB__c</fullName>
        <label>Sconto (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_SAR__c</fullName>
        <label>Sconto (SAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_SGD__c</fullName>
        <label>Sconto (SGD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_USD__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_USD__c   - Prezzo_di_vendita_USD__c  =0, (And (Prezzo_di_listino_USD__c   &lt; Prezzo_di_vendita_USD__c  , Prezzo_di_listino_USD__c  &gt;0  )),
(And (Prezzo_di_listino_USD__c   &gt; Prezzo_di_vendita_USD__c  , Prezzo_di_listino_USD__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_USD__c   - Prezzo_di_vendita_USD__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_formula__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, PSconto_BRL__c, 
&quot;CAD&quot;, PSconto_CAD__c, 
&quot;CHF&quot;, PSconto_CHF__c, 
&quot;CNY&quot;, PSconto_CNY__c, 
&quot;EUR&quot;, PSconto_EUR__c, 
&quot;GBP&quot;, PSconto_GBP__c, 
&quot;HKD&quot;, PSconto_HKD__c, 
&quot;JPY&quot;, PSconto_JPY__c, 
&quot;USD&quot;, PSconto_USD__c, 
&quot;MOP&quot;, PSconto_MOP__c,
&quot;DKK&quot;, PSconto_DKK__c,
&quot;AUD&quot;, PSconto_AUD__c,
&quot;RUB&quot;, PSconto_RUB__c,
&quot;KRW&quot;, PSconto_KRW__c,
&quot;PLN&quot;, PSconto_PLN__c,
&quot;QAR&quot;, PSconto_QAR__c,
&quot;SGD&quot;, PSconto_SGD__c,
&quot;SAR&quot;, PSconto_SAR__c,
 
PSconto__c)</formula>
        <label>% Sconto (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stato_ordine_Ecommerce__c</fullName>
        <label>Stato ordine Ecommerce</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TO_BE_APPROVED</fullName>
                </value>
                <value>
                    <fullName>CONFIRMED</fullName>
                </value>
                <value>
                    <fullName>CONFIRMED_BOUTIQUE</fullName>
                </value>
                <value>
                    <fullName>ACCEPTED</fullName>
                </value>
                <value>
                    <fullName>SUSPENDED</fullName>
                </value>
                <value>
                    <fullName>ALMOST_COMPLETE</fullName>
                </value>
                <value>
                    <fullName>READY_FOR_SHIPPMENT</fullName>
                </value>
                <value>
                    <fullName>SHIPPED</fullName>
                </value>
                <value>
                    <fullName>SHIPPED_BOUTIQUE</fullName>
                </value>
                <value>
                    <fullName>READY_FOR_THE_PICKUP</fullName>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>REFUSED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stato_reso_cambio_Ecommerce__c</fullName>
        <label>Stato Reso/Cambio Ecommerce</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CREATED</fullName>
                </value>
                <value>
                    <fullName>SHIPPED</fullName>
                </value>
                <value>
                    <fullName>WORK_IN_PROGRESS</fullName>
                </value>
                <value>
                    <fullName>ACCEPTED</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>SUSPENDED</fullName>
                </value>
                <value>
                    <fullName>REFUSED</fullName>
                </value>
                <value>
                    <fullName>CONCLUDED</fullName>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tasso_di_Cambio__c</fullName>
        <label>Tasso di Cambio (EUR)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_BRL__c</fullName>
        <label>Tasso di cambio (BRL)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_CAD__c</fullName>
        <label>Tasso di cambio (CAD)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_CHF__c</fullName>
        <label>Tasso di cambio (CHF)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_CNY__c</fullName>
        <label>Tasso di cambio (CNY)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_GBP__c</fullName>
        <label>Tasso di cambio (GBP)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_HKD__c</fullName>
        <label>Tasso di cambio (HKD)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_JPY__c</fullName>
        <label>Tasso di cambio (JPY)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_USD__c</fullName>
        <label>Tasso di cambio (USD)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telefono_Fatturazione__c</fullName>
        <label>Telefono Fatturazione</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_Spedizione__c</fullName>
        <label>Telefono Spedizione</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Documento__c</fullName>
        <label>Tipo Documento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fattura</fullName>
                </value>
                <value>
                    <fullName>Scontrino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_Ordine__c</fullName>
        <label>Tipo Ordine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ordine Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Vendita Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Vendita Oracle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_Store__c</fullName>
        <formula>text (Location__r.Tipo_Store__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Store</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Vendita__c</fullName>
        <description>Flag che indica se è una vendita o un reso (valorizzato con s= sale, r= return, e= exchange) alimentato sia da Micros sia da Ecommerce</description>
        <label>Tipo Vendita</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titolare_per_report__c</fullName>
        <formula>IF($User.Codice_Boutique__c = Id_Location_Micros__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titolare per report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upselling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upselling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valuta_store__c</fullName>
        <formula>$User.CurrencyISOcode__c</formula>
        <label>Valuta store</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voided_BusinessDayDate__c</fullName>
        <label>Voided_BusinessDayDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voided_RetailStoreID__c</fullName>
        <label>Voided RetailStoreID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voided_SequenceNumber__c</fullName>
        <label>Voided SequenceNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voided_WorkstationID__c</fullName>
        <label>Voided WorkstationID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Transazione</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Data_Scontrino__c</columns>
        <columns>Account__c</columns>
        <columns>Location__c</columns>
        <columns>Prezzo_di_Listino_formula__c</columns>
        <columns>Prezzo_di_Vendita_formula__c</columns>
        <columns>Sconto_formula__c</columns>
        <columns>Codice_Nazione_Fatturazione__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>it</language>
    </listViews>
    <listViews>
        <fullName>Store_Firenze</fullName>
        <columns>NAME</columns>
        <columns>Data_Scontrino__c</columns>
        <columns>Id_Cliente__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Prezzo_di_vendita_EUR__c</columns>
        <columns>Sconto_EUR__c</columns>
        <columns>Id_Cliente_Relate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Id_Location_Micros__c</field>
            <operation>equals</operation>
            <value>62</value>
        </filters>
        <label>Store Firenze</label>
        <language>it</language>
        <sharedTo>
            <role>Sede</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Numero Transazione</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transazioni</pluralLabel>
    <recordTypes>
        <fullName>Boutique</fullName>
        <active>true</active>
        <description>Boutique</description>
        <label>Boutique</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_commerce</fullName>
        <active>true</active>
        <description>E-commerce</description>
        <label>E-commerce</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>